--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/giselaimbeth/giselaimbeth.github.io/master/images/400.png" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>Gisela Imbeth Tamara</strong>, tu perfil.<br />
 			</header>
 
 		<!-- Contenido principal -->
