--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<h2>Gisela Imbeth Tamara - Ingeniera Sistemas.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir mis conocimientos en diferentes areas Academica, Profesional, Informatica, Negocios, Desarrollo Web, entre otros.</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
