--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- Tu perfil - Descripción -->
 						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir mis conocimientos en diferentes areas Academica, Profesional, Informatica, Negocios, Desarrollo Web, entre otros.</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/inggiselaimbeth/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
