--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Formo parte de la Comunidad Platzi.</h3>
+								<h3>Formo parte de la Comunidad USDTMAKER</h3>
 								<!-- Tu portafolio - Descripción -->	
-								<p>La comunidad profesional web más reconocida del mundo.</p>
+								<p>La Pasar de tu tarjeta Fisica a la Digital y estar en El Directorio Digital.</p>
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
