--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="https://usdtmaker.com/ref-digitalcityplus" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
+									<img src="https://raw.githubusercontent.com/giselaimbeth/giselaimbeth.github.io/master/images/WhatsApp%20Image%202022-09-20%20at%2010.19.23%20PM.jpeg"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la Comunidad USDTMAKER</h3>
 								<!-- Tu portafolio - Descripción -->	
