--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la Comunidad USDTMAKER</h3>
 								<!-- Tu portafolio - Descripción -->	
-								<p>Pasate de tu tarjeta Fisica a la Digital y estar en El Directorio Digital.</p>
+								<p>Pasa de tu tarjeta Fisica a la Tarjera Digital y toma poscion en El Directorio Digital.</p>
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
