--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la Comunidad USDTMAKER</h3>
 								<!-- Tu portafolio - Descripción -->	
-								<p>Pasa de tu tarjeta Fisica a la Tarjera Digital y toma poscion en El Directorio Digital.</p>
+								<p>Pasa de tu tarjeta Fisica a la Tarjeta Digital y toma poscion en El Directorio Digital.</p>
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
-								<h3>Escribo en Medium.</h3>
-								<p>Escribo tácticas sobre cómo mejorar el marketing de tu empresa.</p>
+								<a href="https://comunidadciudaddigital.com/" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
+								<h3>Portafolio Digital City Plus</h3>
+								<p>Mejora el marketing de tu empresa o negocio.</p>
 							</article>
 						</div>
 					</section>
