--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://comunidadciudaddigital.com/" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
+								<a href="https://comunidadciudaddigital.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/giselaimbeth/giselaimbeth.github.io/master/images/61af7e43-5d10-47b5-bd5f-511b59d949d5.jpg" alt="" /></a>
 								<h3>Portafolio Digital City Plus</h3>
 								<p>Mejora el marketing de tu empresa o negocio.</p>
 							</article>
